# elos_systemmonitoring

./: CMakeLists.txt  README.md  elos-systemmonitoring_0.1.0.orig.tar.xz.delta  elos-systemmonitoring_0.1.0.orig.tar.xz.id
ci/: Dockerfile  README.md  create_debian_release.sh  docker-run.sh
debian/: changelog  control  copyright  elos-plugin-client-punisher.install  elos-plugin-scanner-nightwatch.install  rules  watch
debian/upstream/: metadata
nightwatch/: CMakeLists.txt  README.md
nightwatch/config/: config.yaml  config_tmp.yaml
nightwatch/src/: application.cpp  monitoringUnit.cpp  nightwatchScanner.cpp  systemMonitoring.cpp
nightwatch/tests/: CMakeLists.txt
punisher/: CMakeLists.txt  README.md
punisher/include/: punisher.h
punisher/tests/: CMakeLists.txt
